<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingStart="@dimen/screen_padding_horizontal"
    android:paddingEnd="@dimen/screen_padding_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- Status / thank you message -->
    <TextView
        android:id="@+id/thankyou"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:textAppearance="@style/TextAppearance.Takeme.Body"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Search card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/elevation_low"
        app:contentPadding="@dimen/spacing_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thankyou">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:text="Where are you going?"
                android:textAppearance="@style/TextAppearance.Takeme.Title" />

            <!-- From autocomplete -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/from_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:hint="From...">

                <AutoCompleteTextView
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:completionThreshold="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Divider -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_xxl"
                android:layout_marginEnd="@dimen/spacing_md"
                android:background="@color/divider" />

            <!-- Destination autocomplete -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/destination_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="To...">

                <AutoCompleteTextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:completionThreshold="2" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Trip history section (req 6.3.2) -->
    <TextView
        android:id="@+id/tv_trip_history_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/trip_history"
        android:textAppearance="@style/TextAppearance.Takeme.Title"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_card" />

    <LinearLayout
        android:id="@+id/trip_history_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_trip_history_label" />

    <TextView
        android:id="@+id/tv_no_trips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/no_trip_history"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Takeme.Caption"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_trip_history_label" />

    <!-- Find directions FAB -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/findDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_sm"
        android:onClick="findSingButton"
        android:text="Find Directions"
        android:textAllCaps="false"
        android:textColor="@color/colorOnPrimary"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/directions"
        app:iconTint="@color/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/addDirections"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Add sign FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="80dp"
        android:contentDescription="Add a new sign"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add"
        app:tint="@color/colorOnSecondary" />

    <!-- Ad banner at bottom -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_sm"
        app:adSize="BANNER"
        app:adUnitId="@string/AdKey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
