...
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/findSign"
        layout="@layout/content_main"
        android:clickable="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

