...

        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Got it FAB -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/gotit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:layout_marginBottom="80dp"
        android:onClick="gotit"
        android:text="@string/got_it"
...
